--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+*.*log*
 
 node_modules
 dist
@@ -22,3 +16,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
