--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-	"name": "@flowtr/ratata",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json"
-	},
-	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "3.1.2",
-		"@tsconfig/svelte": "5.0.4",
-		"autoprefixer": "10.4.20",
-		"postcss": "8.5.3",
-		"postcss-load-config": "6.0.1",
-		"svelte": "4.2.19",
-		"svelte-check": "3.8.6",
-		"tailwindcss": "3.4.17",
-		"tslib": "2.8.1",
-		"typescript": "5.8.2",
-		"vite": "5.4.14"
-	}
+  "name": "@dyedev/ratata",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "rsbuild dev",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview"
+  },
+  "devDependencies": {
+    "@rsbuild/core": "^1.2.15",
+    "@rsbuild/plugin-svelte": "^1.0.8",
+    "@rspack/binding": "^1.2.7",
+    "@tailwindcss/postcss": "^4.0.10",
+    "eslint": "^9.21.0",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.3.3",
+    "tailwindcss": "^4.0.10",
+    "typescript": "5.8.2"
+  },
+  "dependencies": {
+    "svelte": "^5.22.5"
+  }
 }
