--- a/package.json
+++ b/package.json
@@ -4,21 +4,32 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "lint": "eslint --ext .js,.ts,.svelte src",
+    "lint:fix": "eslint --ext .js,.ts,.svelte src --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "dev": "rsbuild dev",
     "build": "rsbuild build",
     "preview": "rsbuild preview"
   },
   "devDependencies": {
-    "@rsbuild/core": "1.2.15",
+    "@eslint/js": "^9.23.0",
+    "@rsbuild/core": "1.2.19",
     "@rsbuild/plugin-svelte": "1.0.8",
     "@rspack/binding": "1.2.7",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@sveltejs/vite-plugin-svelte-inspector": "^4.0.1",
     "@tailwindcss/postcss": "4.0.10",
     "eslint": "9.21.0",
+    "eslint-plugin-svelte": "^3.3.3",
+    "globals": "^16.0.0",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
-    "prettier-plugin-svelte": "3.3.3",
+    "prettier-plugin-svelte": "^3.3.3",
     "tailwindcss": "4.0.10",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "typescript-eslint": "^8.27.0",
+    "vite": "^6.2.2"
   },
   "dependencies": {
     "@lucide/svelte": "^0.483.0",
@@ -29,5 +40,6 @@
       "core-js",
       "svelte-preprocess"
     ]
-  }
+  },
+  "packageManager": "yarn@4.7.0"
 }
