--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Node.js
-        runs: |
-          corepack enable
-          corepack prepare yarn@canary --activate
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "current"
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
 
       - name: Install dependencies
-        run: yarn
+        run: bun install
 
       - name: Build
-        run: yarn run build
+        run: bun run build
 
       - name: Lint
         run: |
-          yarn run lint
-          yarn run format:check
+          bun run lint
+          bun run format:check
